# jEMach

./: .eslintrc.js  .gitignore  Makefile  Manifest.toml  Project.toml  README.md  benchmark.lua  build.zig  example-config.lua  example-configs-new.lua  julia_test.jl  package.json  run-benchmark.sh  smoke_test.lua  tsconfig.json  verify-setup.sh
lua/jemach/: init.lua  julia_payloads.lua  lsp.lua  picker.lua  repl.lua  tmux.lua  workspace.lua
lua/jemach/backend/: init.lua  manager.lua  native.lua  slime.lua  toggleterm.lua  zellij.lua
native/: CMakeLists.txt  Makefile  native.cpp
plugin/: jemach.lua
scripts/: jl_tui.lua  jl_watcher.jl
src/: cli.ts  config.ts  example.ts  index.ts  jEMach.jl  julia-parser.ts  tmux-utils.ts
zig/: build.zig
zig/src/: main.zig
